@@ -1,17 +1,23 @@
 package me.hydos.focu;
 
 import me.hydos.focu.mald.logic.MalderLoader;
+import me.hydos.focu.providers.ForgeProvider;
 
-import java.nio.file.Paths;
+import java.nio.file.Path;
 
 public class Main {
 
     public static void main(String[] args) {
-        MalderLoader malderLoader = new MalderLoader()
-                .loadMalder(Paths.get("malders/TitleScreen.class"));
+        ForgeProvider forge = ForgeProvider.createFromClient(
+                Path.of("C:/Users/hayde/AppData/Roaming/.minecraft"),
+                "1.18.2",
+                "40.1.0"
+        );
 
-        ForgePatcher patcher = new ForgePatcher(Paths.get("C:/Users/hayde/AppData/Roaming/.minecraft"), malderLoader, "1.18.2-40.0.52");
+        MalderLoader malderLoader = new MalderLoader();
+                //.loadMalder(Paths.get("malders/TitleScreen.class"));
 
+        ForgePatcher patcher = new ForgePatcher(forge, malderLoader);
         patcher.apply();
     }
 }
